# OnnxFlow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/include/: alloc.h  base.h  myfunc.h
core/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  debug.h  myfunc.h
core/include/op/: layer.h
core/include/op/kernels/: kernels_interface.h  s.cpp
core/include/tensor/: tensor.h
core/source/: alloc.cpp  debug.cpp  myfunc.cpp
core/source/base/: alloc.cpp  buffer.cpp  debug.cpp  myfunc.cpp
core/source/op/: layer.cpp
core/source/tensor/: tensor.cpp
framework/vllm/: basic.py
test/: CMakeLists.txt  test_alloc.cpp  test_buffer.cpp  test_layer.cpp  test_tensor.cpp
test/test_func/: test_memcpy.cpp
test/test_op/: attention.py  test.py
test/test_op/Python_scripts/: Self_attention.py
test/test_op/Python_scripts/Attention/: MHA.py
test/test_op/Python_scripts/Norm/: LayerNorm.py  RMSNorm.py
test/test_op/Python_scripts/tokenization/: BPE.py
